# hsmcpp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.sh  build_vs.cmd  conanfile.py  coverage.info  hsmcpp.pc.in  library.json  library.properties  packagePlatformioArduino.sh  validate.sh
.github/workflows/: auto_tag.yml  build.yml  ci_pipeline.yml  deploy-arduino.yml  deploy-arduinoide.yml  deploy-platformio.yml  plantuml.yml  sca_codeql.yml  sca_coverity.yml  sca_misra.yml  tests.yml  update-doc.yml
ci_reference/example/: build.yml
cmake/: dispatchers.cmake  freertos-config.cmake  hsmcpp-config.cmake  hsmcpp-glib.cmake  hsmcpp-glibmm.cmake  install.cmake
cmake/dispatchers/: freertos.cmake  glib.cmake  glibmm.cmake  qt.cmake  std.cmake
cmake/install/: glib.cmake  glibmm.cmake  qt.cmake  std.cmake
doc/: ci_workflow.pu  conan.md
doc/diagrams/: 00_helloworld.plantuml  01_trafficlight.plantuml  simple_fsm.plantuml  wiki_dispatchers_std.plantuml  wiki_examples_state_src_include.plantuml  wiki_examples_xiinclude_direct.plantuml  wiki_examples_xiinclude_wrapped.plantuml  wiki_features_callbacks.plantuml  wiki_features_history.plantuml  wiki_features_history_deep_01.plantuml  wiki_features_history_deep_02.plantuml  wiki_features_history_shallow_01.plantuml  wiki_features_history_shallow_02.plantuml  wiki_features_history_shallow_03.plantuml  wiki_features_history_shallow_04.plantuml  wiki_features_parallel_usecase.plantuml  wiki_features_parallel_usecase_media.plantuml  wiki_features_parallel_usecase_navi.plantuml  wiki_features_parallel_usecase_weather.plantuml  wiki_features_simple_fsm.plantuml  wiki_features_state.plantuml  wiki_features_substate.plantuml  wiki_features_substate_cond_entries.plantuml  wiki_features_substate_fsm_approach.plantuml  (+6 more)
etc/: cppcheck_suppress.txt
examples/: 00_helloworld_qt.cpp  00_helloworld_std.cpp  01_trafficlight.cpp  01_trafficlight_class.cpp  01_trafficlight_lambda.cpp  CMakeLists.txt
examples/00_helloworld/: 00_helloworld_glibmm.cpp  00_helloworld_qt.cpp  00_helloworld_std.cpp  CMakeLists.txt
examples/01_blink/src/: main.cpp
examples/01_trafficlight/: 01_trafficlight.cpp  01_trafficlight_class.cpp  01_trafficlight_lambda.cpp  CMakeLists.txt
examples/02_blink_button/: blink_button.scxml  platformio.ini
examples/02_blink_button/src/: main.cpp
examples/02_generated/: 02_generated.cpp  02_generated.scxml  CMakeLists.txt
examples/03_debugging/: 03_debugging.cpp  03_debugging.scxml  CMakeLists.txt
examples/04_history/: 04_history.cpp  04_history.scxml  CMakeLists.txt
examples/05_timers/: 05_timers.cpp  05_timers.scxml  05_timers_generated.cpp  CMakeLists.txt
examples/06_actions/: 06_actions.cpp  06_actions.scxml  CMakeLists.txt
examples/07_build/: 07_build.scxml  build_all.sh  main.cpp
examples/07_build/using_code/: CMakeLists.txt
examples/07_build/using_conan/: CMakeLists.txt  conanfile.txt  main.cpp
examples/07_build/using_fetch/: CMakeLists.txt
examples/07_build/using_pkgconfig/: CMakeLists.txt
examples/08_freertos/: 08_freertos.scxml  CMakeLists.txt  FreeRTOSConfig.h  SwitchHsm.hpp  build.sh  hooks.c  main.cpp
examples/09_arduino/: README.md
examples/09_arduino/01_blink/: blink.scxml  platformio.ini
examples/09_arduino/01_blink/src/: main.cpp
examples/10_timer_issue/: 10_generated.cpp  10_generated.scxml  CMakeLists.txt
examples/cmake_templates/: CMakeLists_as_code.txt  CMakeLists_fetch.txt  CMakeLists_pkgconfig.txt
examples/scxml/: generate_diagrams.sh
examples/scxml/includes/: state1.scxml  state_src_include.scxml  substates1.scxml  xi_include_direct.scxml  xi_include_wrapped.scxml
include/: HsmEventDispatcherBase.hpp  HsmEventDispatcherGLib.hpp  HsmEventDispatcherGLibmm.hpp  HsmEventDispatcherSTD.hpp  IHsmEventDispatcher.hpp  hsm.hpp  logging.hpp  variant.hpp
pkgconfig/: hsmcpp.pc.in  hsmcpp_glib.pc.in  hsmcpp_glibmm.pc.in  hsmcpp_qt.pc.in  hsmcpp_std.pc.in
platformio/: library.json.in
scripts/: apply_clang_format.sh  buildFreeRTOS.sh  build_vs.cmd  validate.sh  validate_metadata.py
scxml2gen/: CMakeLists.txt  scxml2gen.py
src/: HsmEventDispatcherArduino.cpp  HsmEventDispatcherBase.cpp  HsmEventDispatcherFreeRTOS.cpp  HsmEventDispatcherGLib.cpp  HsmEventDispatcherGLibmm.cpp  HsmEventDispatcherQt.cpp  HsmEventDispatcherSTD.cpp  HsmImpl.cpp  HsmImpl.hpp  HsmImplTypes.cpp  HsmImplTypes.hpp  hsm.cpp  hsmcpp.hpp  logging.cpp  variant.cpp
tests/: 01_states.cpp  02_substates.cpp  03_transitions.cpp  04_multithreaded.cpp  05_callbacks.cpp  06_dispatchers.cpp  07_parallel.cpp  08_history.cpp  09_timers.cpp  10_state_actions.cpp  11_finalstate.cpp  20_variant.cpp  CMakeLists.txt  ConfigurableEventListener.hpp  TestsCommon.cpp  TestsCommon.hpp  emptyapp.cpp  main.cpp  mainFreeRTOS.cpp  mainGLib.cpp  mainGLibmm.cpp  mainQt.cpp  mainSTD.cpp  test_memory_footprint.cpp
tests/hsm/: ABCHsm.cpp  ABCHsm.hpp  AsyncHsm.cpp  AsyncHsm.hpp  BaseAsyncHsm.cpp  BaseAsyncHsm.hpp  TrafficLightHsm.cpp  TrafficLightHsm.hpp
tests/scxml/: final.scxml  microwave.scxml  multilevel.scxml  parallel.scxml  sample.scxml  timers.scxml  transitions.scxml
tests/scxml/08_history/: 08_history_deep.scxml  08_history_multiple.scxml
tests/scxml/includes/: include.scxml  include_full_scxml copy.scxml  include_full_scxml_no_initial.scxml  include_large.scxml  include_only_elements.scxml  include_simple_no_initial.scxml  include_simple_with_initial.scxml  include_single_state.scxml  include_single_state2.scxml
tests/testcases/: 01_states.cpp  02_substates.cpp  03_transitions.cpp  04_multithreaded.cpp  06_dispatchers.cpp  07_parallel.cpp  08_history.cpp  09_timers.cpp  10_state_actions.cpp  11_finalstate.cpp  20_variant.cpp  99_regression_tests.cpp
tests/usecases/: 08_history_default.scxml  08_history_shallow.scxml  08_history_simple.scxml
tests/utils/gtestbadge/: Badge.cpp  Badge.h  BadgeEventListener.cpp  BadgeEventListener.h  BadgeTemplate.cpp  BadgeTemplate.h  README.md  verdana.h
tools/: scxml2gen.py  template.cpp  template.hpp
tools/cmake/: CMakeLists.txt
(+134 files in other folders)
